--- a/Views/Views.csproj
+++ b/Views/Views.csproj
@@ -7,4 +7,53 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Images\background_home.png" />
+    <None Remove="Images\background_login.png" />
+    <None Remove="Images\background_login1.png" />
+    <None Remove="Images\bill.png" />
+    <None Remove="Images\close_208px.png" />
+    <None Remove="Images\customer.png" />
+    <None Remove="Images\employee.png" />
+    <None Remove="Images\logo.png" />
+    <None Remove="Images\manager.png" />
+    <None Remove="Images\order.png" />
+    <None Remove="Images\person.png" />
+    <None Remove="Images\product.png" />
+    <None Remove="Images\purchase.png" />
+    <None Remove="Images\report.png" />
+    <None Remove="Images\role.png" />
+    <None Remove="Images\search.png" />
+    <None Remove="Images\setting.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\ViewModels\ViewModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\background_home.png" />
+    <Resource Include="Images\background_login.png" />
+    <Resource Include="Images\background_login1.png" />
+    <Resource Include="Images\bill.png" />
+    <Resource Include="Images\close_208px.png" />
+    <Resource Include="Images\customer.png" />
+    <Resource Include="Images\employee.png" />
+    <Resource Include="Images\logo.png" />
+    <Resource Include="Images\manager.png" />
+    <Resource Include="Images\order.png" />
+    <Resource Include="Images\person.png" />
+    <Resource Include="Images\product.png" />
+    <Resource Include="Images\purchase.png" />
+    <Resource Include="Images\report.png" />
+    <Resource Include="Images\role.png" />
+    <Resource Include="Images\search.png" />
+    <Resource Include="Images\setting.png" />
+  </ItemGroup>
+
 </Project>
